updates in seo and added files robots and sitemap

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta name="author" content="VVIP Properties" />
     <meta
       name="description"
-      content="Latest trends, tips and insights about commercial properties in Vapi. Get expert advice on office spaces, retail locations, and industrial real estate investments."
+      content="Discover NeoVista, Vapi's premier luxury commercial property by Odhav Developers. Elite offices, retail showrooms, and hospitality spaces in the heart of Vapi, Gujarat."
     />
     <meta
       name="keywords"
-      content="commercial real estate , Vapi property trends, business space advice, office leasing tips, retail location strategies, industrial property insights"
+      content="Vapi real estate, NeoVista Vapi, luxury commercial property, office spaces, retail showrooms, healthcare hub, Vapi properties, Odhav Developers , best Real estate property of Vapi, Gujarat, commercial real estate Vapi, NeoVista business towers, luxury offices Vapi, retail spaces Vapi, healthcare facilities Vapi, VVIP properties Vapi, Vapi business center, NeoVista Vapi Gujarat, commercial property Vapi, luxury business spaces Vapi, NeoVista office spaces, Vapi retail showrooms, healthcare tower Vapi, Odhav Developers Vapi , Vapi commercial real estate, NeoVista luxury offices, Vapi business properties, Vapi commercial spaces, NeoVista retail showrooms, Vapi healthcare hub, Odhav Developers NeoVista"
     />
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="7 days" />
@@ -30,7 +30,7 @@
     />
     <meta
       property="og:description"
-      content="Premium commercial properties in Vapi offering luxury office spaces and business amenities for elite entrepreneurs."
+      content="Explore NeoVista, a twin-tower marvel in Vapi offering luxury offices, retail, and healthcare spaces."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vapisvip.com/" />
