--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         "hasMap": "https://goo.gl/maps/examplemapurl",
         "sameAs": [
           "https://www.facebook.com/profile.php?id=61576362355214",
-          "https://www.instagram.com/odhavdevelopers/",
+          "https://www.instagram.com/vapis_vip?igsh=MW4wZzZkaHF1aTU3dw==",
           "https://www.linkedin.com/in/vapis-vip-b45792365?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
         ],
         "aggregateRating": {
@@ -558,7 +558,9 @@
               target="_blank"
               ><i class="fab fa-facebook-f"></i
             ></a>
-            <a href="https://www.instagram.com/odhavdevelopers/" target="_blank"
+            <a
+              href="https://www.instagram.com/vapis_vip?igsh=MW4wZzZkaHF1aTU3dw=="
+              target="_blank"
               ><i class="fab fa-instagram"></i
             ></a>
             <a
@@ -1746,7 +1748,7 @@ Contact Area
                       ></a>
 
                       <a
-                        href="https://www.instagram.com/odhavdevelopers/"
+                        href="https://www.instagram.com/vapis_vip?igsh=MW4wZzZkaHF1aTU3dw=="
                         target="_blank"
                         ><i class="fab fa-instagram"></i
                       ></a>
