blog changes and optimized seo more preciesly files changed - index , blogs files

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Commercial Real Estate Insights | VVIP Properties</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+    <title>
+      NeoVista Vapi | Luxury Commercial Property & Business Towers in Gujarat
+    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="VVIP Properties" />
     <meta
       name="description"
@@ -15,10 +14,9 @@
     />
     <meta
       name="keywords"
-      content="Vapi real estate, NeoVista Vapi, luxury commercial property, office spaces, retail showrooms, healthcare hub, Vapi properties, Odhav Developers , best Real estate property of Vapi, Gujarat, commercial real estate Vapi, NeoVista business towers, luxury offices Vapi, retail spaces Vapi, healthcare facilities Vapi, VVIP properties Vapi, Vapi business center, NeoVista Vapi Gujarat, commercial property Vapi, luxury business spaces Vapi, NeoVista office spaces, Vapi retail showrooms, healthcare tower Vapi, Odhav Developers Vapi , Vapi commercial real estate, NeoVista luxury offices, Vapi business properties, Vapi commercial spaces, NeoVista retail showrooms, Vapi healthcare hub, Odhav Developers NeoVista"
+      content="NeoVista Vapi, luxury commercial property Vapi, office spaces Vapi, retail showrooms Vapi, healthcare hub Vapi, Odhav Developers Vapi, best real estate Vapi, commercial real estate Gujarat, NeoVista business towers, VVIP properties Vapi, Vapi business center, healthcare tower Vapi, premium retail spaces Vapi, NeoVista luxury offices, commercial property in Vapi, business properties Gujarat"
     />
-    <meta name="robots" content="index, follow" />
-    <meta name="revisit-after" content="7 days" />
+
     <link rel="canonical" href="https://vapisvip.com/" />
 
     <!-- Mobile Specific Metas -->
@@ -26,17 +24,17 @@
     <!-- Social Media Meta Tags -->
     <meta
       property="og:title"
-      content="VVIP Commercial Properties | Luxury Business Spaces in Vapi"
+      content="NeoVista Vapi - Luxury Commercial Property in Gujarat"
     />
     <meta
       property="og:description"
-      content="Explore NeoVista, a twin-tower marvel in Vapi offering luxury offices, retail, and healthcare spaces."
+      content="Premium office spaces, retail showrooms & healthcare facilities in Vapi's most prestigious commercial towers"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vapisvip.com/" />
     <meta
       property="og:image"
-      content="https://vapisvip.com/assets/img/VVIP logo-01.png"
+      content="https://vapisvip.com/assets/img/hero/Banner-01.webp"
     />
     <meta property="og:site_name" content="VVIP Properties" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -44,11 +42,6 @@
     <meta
       name="twitter:description"
       content="Premium commercial properties in Vapi offering luxury office spaces."
-    />
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
 
     <!-- Favicons -->
@@ -78,8 +71,8 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <meta http-equiv="Cache-Control" content="max-age=31536000, public" />
-    <meta http-equiv="Expires" content="31536000" />
 
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -87,73 +80,35 @@
       rel="stylesheet"
     />
 
-    <!-- Non-critical CSS -->
-    <link
-      rel="stylesheet"
-      href="assets/css/bootstrap.min.css"
-      media="print"
-      onload="this.media='all'"
-    />
-    <link
-      rel="stylesheet"
-      href="assets/css/fontawesome.min.css"
-      media="print"
-      onload="this.media='all'"
-    />
-
-    <link
-      rel="stylesheet"
-      href="assets/css/swiper-bundle.min.css"
-      media="print"
-      onload="this.media='all'"
-    />
-
-    <link
-      rel="stylesheet"
-      href="assets/css/style.css?v=1.2"
-      media="print"
-      onload="this.media='all'"
-    />
-    <link
-      rel="stylesheet"
-      href="assets/css/custom.css"
-      media="print"
-      onload="this.media='all'"
-    />
     <style>
       * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
       }
-
       body {
         overflow-x: hidden;
       }
-
       .carousel-container {
         width: 100vw;
         height: auto;
         position: relative;
         overflow: hidden;
       }
-
       .carousel {
         display: flex;
         transition: transform 0.5s ease-in-out;
         width: 100%;
       }
-
       .carousel img {
         width: 100vw;
         height: auto;
         object-fit: cover;
         object-position: center;
-        aspect-ratio: 16 / 9;
+        aspect-ratio: 16/9;
         flex-shrink: 0;
         margin-top: 100px;
       }
-
       .carousel-dots {
         position: absolute;
         bottom: 10px;
@@ -162,7 +117,6 @@
         display: flex;
         gap: 10px;
       }
-
       .dot {
         width: 12px;
         height: 12px;
@@ -171,46 +125,9 @@
         cursor: pointer;
         transition: background-color 0.3s;
       }
-
       .dot.active {
         background-color: #333;
       }
-
-      /* Responsive adjustments */
-      @media (max-width: 768px) {
-        .carousel img {
-          aspect-ratio: 3 / 2;
-          margin-top: 100px;
-        }
-
-        .dot {
-          width: 10px;
-          height: 10px;
-        }
-      }
-
-      @media (max-width: 480px) {
-        .carousel img {
-          aspect-ratio: 3 / 2;
-          margin-top: 100px;
-        }
-
-        .carousel-dots {
-          bottom: 8px;
-          gap: 8px;
-        }
-
-        .dot {
-          width: 8px;
-          height: 8px;
-        }
-      }
-      @media (max-width: 374px) {
-        .about-contact-details {
-          margin-top: -15px;
-        }
-      }
-
       .loader-container {
         position: fixed;
         top: 0;
@@ -224,23 +141,16 @@
         z-index: 9999;
         transition: opacity 0.5s ease;
       }
-
-      /* Hide loader when loading is complete */
       .loader-container.hidden {
         opacity: 0;
         pointer-events: none;
       }
-
-      /* Style the key image with reveal effect */
       .loader-key {
         width: 250px;
         height: auto;
         opacity: 0.8;
-
         animation: reveal 2s infinite ease-in-out;
       }
-
-      /* Reveal animation */
       @keyframes reveal {
         0% {
           opacity: 0.3;
@@ -255,40 +165,100 @@
           transform: scale(0.95);
         }
       }
-
-      /* Responsive adjustments */
       @media (max-width: 768px) {
+        .carousel img {
+          aspect-ratio: 3/2;
+          margin-top: 100px;
+        }
+        .dot {
+          width: 10px;
+          height: 10px;
+        }
         .loader-key {
           width: 80px;
           max-width: 120px;
         }
       }
-
-      /* Sample content styling */
+      @media (max-width: 480px) {
+        .carousel img {
+          aspect-ratio: 3/2;
+          margin-top: 100px;
+        }
+        .carousel-dots {
+          bottom: 8px;
+          gap: 8px;
+        }
+        .dot {
+          width: 8px;
+          height: 8px;
+        }
+      }
+      @media (max-width: 374px) {
+        .about-contact-details {
+          margin-top: -15px;
+        }
+      }
       .content {
         padding: 20px;
         text-align: center;
         font-family: Arial, sans-serif;
       }
     </style>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+    <!-- Non-critical CSS (deferred) -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      media="print"
+      onload="this.media='all'"
+    />
+    <link
+      rel="stylesheet"
+      href="assets/css/bootstrap.min.css"
+      media="print"
+      onload="this.media='all'"
+    />
+    <link
+      rel="stylesheet"
+      href="assets/css/fontawesome.min.css"
+      media="print"
+      onload="this.media='all'"
+    />
+    <link
+      rel="stylesheet"
+      href="assets/css/swiper-bundle.min.css"
+      media="print"
+      onload="this.media='all'"
+    />
+    <link
+      rel="stylesheet"
+      href="assets/css/style.css?v=1.2"
+      media="print"
+      onload="this.media='all'"
+    />
+    <link
+      rel="stylesheet"
+      href="assets/css/custom.css"
+      media="print"
+      onload="this.media='all'"
+    />
   </head>
 
   <body class="bg-smoke">
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "CommercialProperty",
+        "@type": "LocalBusiness",
         "name": "VVIP Commercial Properties | NeoVista Business Towers",
-        "description": "Premium luxury office spaces, retail showrooms & healthcare facilities in Vapi, Gujarat. VVIP offers state-of-the-art commercial properties with valet parking, art gallery foyers & VIP amenities.",
+        "description": "Premium luxury office spaces, retail showrooms, and healthcare facilities in Vapi, Gujarat. VVIP offers state of the art commercial properties with valet parking, art gallery foyers, and VIP amenities.",
         "image": [
-          "https://vapisvip.com/assets/img/VVIP-logo-01.png",
+          "https://vapisvip.com/assets/img/VVIP-logo-01.webp",
           "https://vapisvip.com/assets/img/hero/Banner-01.webp",
           "https://vapisvip.com/assets/img/hero/About-image-01.webp"
         ],
         "address": {
           "@type": "PostalAddress",
-          "streetAddress": "NeoVista, Nr. Forest Ply & Hardware,Silvassa Vapi Rd,char rasta, Vapi, Gujarat 396191",
+          "streetAddress": "NeoVista, Nr. Forest Ply & Hardware, Silvassa Vapi Rd, Char Rasta",
           "addressLocality": "Vapi",
           "addressRegion": "Gujarat",
           "postalCode": "396191",
@@ -296,17 +266,32 @@
         },
         "geo": {
           "@type": "GeoCoordinates",
-          "latitude": "20.3687889",
-          "longitude": "72.9167278"
+          "latitude": 20.3687889,
+          "longitude": 72.9167278
         },
         "telephone": "+919687664422",
-        "url": "https://vapisvip.com/",
-        "openingHoursSpecification": {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
-          "opens": "09:00",
-          "closes": "18:00"
-        },
+        "email": "mail@vapisvip.com",
+        "url": "https://vapisvip.com",
+        "openingHoursSpecification": [
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+              "Monday",
+              "Tuesday",
+              "Wednesday",
+              "Thursday",
+              "Friday"
+            ],
+            "opens": "09:00",
+            "closes": "18:00"
+          },
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": ["Saturday"],
+            "opens": "10:00",
+            "closes": "16:00"
+          }
+        ],
         "priceRange": "$$$",
         "amenityFeature": [
           {
@@ -330,21 +315,23 @@
             "value": true
           }
         ],
-        "hasMap": "https://goo.gl/maps/examplemapurl",
         "sameAs": [
           "https://www.facebook.com/profile.php?id=61576362355214",
-          "https://www.instagram.com/vapis_vip?igsh=MW4wZzZkaHF1aTU3dw==",
-          "https://www.linkedin.com/in/vapis-vip-b45792365?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+          "https://www.instagram.com/vapis_vip",
+          "https://www.linkedin.com/company/vapis-vip"
         ],
         "aggregateRating": {
           "@type": "AggregateRating",
-          "ratingValue": "4.8",
-          "reviewCount": "47",
-          "bestRating": "5"
+          "ratingValue": 4.8,
+          "reviewCount": 47,
+          "bestRating": 5
         },
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "https://vapisvip.com/search?q={search_term_string}",
+          "target": {
+            "@type": "EntryPoint",
+            "urlTemplate": "https://vapisvip.com/search?q={search_term_string}"
+          },
           "query-input": "required name=search_term_string"
         }
       }
@@ -642,17 +629,17 @@
       <div class="carousel">
         <img
           src="assets/img/hero/Banner-01.webp"
-          alt="Banner 1"
+          alt="NeoVista Vapi luxury commercial property"
           loading="lazy"
         />
         <img
           src="assets/img/hero/Banner-02.webp"
-          alt="Banner 2"
+          alt="NeoVista Vapi business towers"
           loading="lazy"
         />
         <img
           src="assets/img/hero/Banner-03.webp"
-          alt="Banner 3"
+          alt="NeoVista Vapi luxury offices"
           loading="lazy"
         />
       </div>
